--- a/package.json
+++ b/package.json
@@ -5,10 +5,19 @@
   "main": "index.js",
   "author": "common",
   "license": "MIT",
+  "bin": {
+    "api": "bin/api"
+  },
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "chalk": "^2.4.1",
     "commander": "^2.15.1",
     "inquirer": "^6.0.0",
     "request": "^2.87.0"
+  },
+  "devDependencies": {
+    "jest": "^23.1.0"
   }
 }
