--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chalk": "^2.4.1",
     "commander": "^2.15.1",
     "inquirer": "^6.0.0",
+    "lowdb": "^1.0.0",
     "request": "^2.87.0"
   },
   "devDependencies": {
