--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "commander": "^2.15.1",
+    "express": "^4.16.3",
+    "http-proxy-middleware": "^0.18.0",
     "inquirer": "^6.0.0",
     "jsondiffpatch": "^0.3.10",
     "lowdb": "^1.0.0",
