--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "inquirer": "^6.0.0",
     "jsondiffpatch": "^0.3.10",
     "lowdb": "^1.0.0",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "user-home": "^2.0.0"
   },
   "devDependencies": {
     "jest": "^23.1.0"
